# whisper_server

./: .gitignore  .gitmodules  README.md  bilibili.fish  pyproject.toml
model/fish_speech/: text2semantic-400m-v0.2-4k.pth  vqgan-v1.pth
model/fish_speech/prompt/: audio.json
whisper_server/: __init__.py  lux.py  tts.py  views.py  whisper_gpt.py
wisper_server/: __init__.py  views.py  whisper_gpt.py
